--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h3 align="middle">About me:</h3>
 <p id="about_p" align="middle">
     my hobbies are basketball and video games.<br/>
-    so far (third year) i was mostly intrested in: Mechine learing, Parralel programing and Information retrival.<br/>
+    so far (third year) i was mostly intrested in: Machine learing, Parralel programing and Information retrival.<br/>
     my expactions from the course are to know at the end of the course how to build a proffesional web site and get some experiance with industry's programs.
 </p>
 </div>
@@ -117,12 +117,33 @@ scan my code
 <section id="spa" class="section">
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
 ans
 <br/>
+<ol>
+  The most differences between web 1.0 to 2.0 and 3.0 are:
+  <ul>
+    <li>
+        	Web 1.0 has only static web pages that has 1 contributor which is the author of the site. The information in the site update once in a while and has no interaction with the users.
+    </li>
+    <li>
+        	In web 2.0 the huge difference was that the interaction between the users to the web pages was added. Now users can update content of webs pages on their own and the sociality began for example blogs, social networks and search engines. All thanks to the option of interacting with the page.
+    </li>
+    <li>
+        	Web 3.0 made a great jump by analyzing users interaction and add a new technologies such as: recommendation systems, machine learning and natural language processing. All these above using wisdom of the crowd to make the internet more: indexed, unified Semantics and like virtual web database for information.
+    </li>
+  </ul>
+  Lets take the use-case of searching for a side effects of Acamol.
+  <p>
+      In web 1.0 I was needed to hear from someone(not on the internet) on website URL that contains information on Acamol side effects, without that I could not find the information I need.
+  </p>
+  <p>
+      In web 2.0 I could use google or other search engines the query “side effects of acamol” and use the content of the websites that returned form the search. Another option is to get information from other people on social networks and use other people wisdom by talking to them in blogs or forums.
+  </p>
+  <p>
+      In web 3.0 there are advanced technologies such as machine learning and recommandtion systems that help me get the side effects of acamol based on content of millions of web pages such as “first life research”.
+  </p>
+</ol>
+
 <br/>
 <br/>
 </section>
