--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ scan my code
 ans
 <br/>
 <ol>
-  The most differences between web 1.0 to 2.0 and 3.0 are:
+  1. The most differences between web 1.0 to 2.0 and 3.0 are:
   <ul>
     <li>
         	Web 1.0 has only static web pages that has 1 contributor which is the author of the site. The information in the site update once in a while and has no interaction with the users.
@@ -132,7 +132,10 @@ ans
         	Web 3.0 made a great jump by analyzing users interaction and add a new technologies such as: recommendation systems, machine learning and natural language processing. All these above using wisdom of the crowd to make the internet more: indexed, unified Semantics and like virtual web database for information.
     </li>
   </ul>
-  Lets take the use-case of searching for a side effects of Acamol.
+<br/>
+<br/>
+<br/>
+  2. Lets take the use-case of searching for a side effects of Acamol.
   <p>
       In web 1.0 I was needed to hear from someone(not on the internet) on website URL that contains information on Acamol side effects, without that I could not find the information I need.
   </p>
