--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@ my photos
   <a target="_blank" href="pc1.jpg">
     <img src="pc1.jpg"  width="330" height="320" >
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">at prom</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="pc2.jpg">
     <img src="pc2.jpg" width="300" height="320">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">a day in the pool</div>
 </div>
 
 <div class="gallery">
     <a target="_blank" href="pc4.jpg">
       <img src="pc4.jpg" width="470" height="320">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">friday hangout</div>
   </div>
 
 <div class="gallery">
   <a target="_blank" href="pc3.jpg">
     <img src="pc3.jpg" width="370" height="320">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">another hangout</div>
 </div>
 <br/>
 <br/>
